Searching Medications By Name 7

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,25 @@
 {
-"version": 2,
-"builds": [
-{
-"src": "src/index.js",
-"use": "@vercel/node"
-}
-],
-"routes": [
-{
-"src": "/(.*)",
-"dest": "src/index.js"
-}
-]
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "src/index.js",
+      "headers": {
+        "Cache-Control": "no-store, no-cache, must-revalidate, proxy-revalidate",
+        "Pragma": "no-cache",
+        "Expires": "0",
+        "Surrogate-Control": "no-store"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "src/index.js"
+    }
+  ]
 }
